--- a/src/lithium/doc/lithium4.tex
+++ b/src/lithium/doc/lithium4.tex
@@ -246,5 +246,34 @@ with
 \end{array}
 \end{equation}
 
+\subsection{Checking}
+\begin{equation}
+\begin{pmatrix}
+	1 & 1 & 1 & 1 & 1 & 1\\
+	0 & k_{q'}^6 & k_f^6 & -(k_{p'}^6+k_r^6) & 0 & 0\\
+	0 & k_{q'}^7 & 0 & 0 & k_f^7 & -(k_{p'}^7+k_r^7)\\
+	k_{a'}^6 & 0 & -(k_f^6+k_d^6) & k_r^6 & 0 & 0\\
+	k_{a'}^7 & 0 & 0 & 0 & -(k_f^7+k_d^7) & k_r^7\\
+	0 & k_h+k_{q'}^6+k_{q'}^7 & 0 & k_{p'}^6 & 0 & k_{p'}^7\\
+\end{pmatrix}
+\begin{pmatrix}
+\Eout\\
+\EHin\\
+\LiEout{6}\\
+\LiEin{6}\\
+\LiEout{7}\\
+\LiEin{7}\\
+\end{pmatrix}
+=
+\begin{pmatrix}
+E_0\\
+0\\
+0\\
+0\\
+0\\
+0\\
+\end{pmatrix}
+\end{equation}
+
 \end{document}
 
