got equations, need to reduce once again...

--- a/src/lithium/doc/lithium6.tex
+++ b/src/lithium/doc/lithium6.tex
@@ -327,11 +327,45 @@ For a given $\Hin$
 	+&\left(A'_6 \LiOut{6} + A'_7 \LiOut{7}\right)\left(1 + J'_6 \LiIn{6} + J'_7 \LiIn{7}\right)\\
 	\end{array}
 	}
-	
 	\\
+	\\
+	& = & E_0 \dfrac{\left(k_h + B'7\LiIn{7}\right) A'_6 \LiOut{6} - \left(A'_7 \LiOut{7} B'_6 \LiIn{6}\right) }{\square}\\
 	\end{array}
 \end{equation}
 
+\begin{equation}
+	\begin{array}{rcl}
+	\partial_t \LiIn{7} & = &E_0
+	\dfrac{\left(k_h + B'_6 \LiIn{6} + B'_7 \LiIn{7}\right) A'_7 \LiOut{7}-
+	\left(A'_6 \LiOut{6} + A'_7 \LiOut{7}\right) B'_7 \LiIn{7}
+	}
+	{\square}\\
+	\\
+	& = & E_0
+	\dfrac{\left(k_h + B'_6 \LiIn{6}\right) A'_7 \LiOut{7}
+	 -
+	 \left(A'_6\LiOut{6}B'_7\LiIn{7}\right) 
+	 }
+	{\square}
+	\end{array}
+\end{equation}
+
+\section{Single Species}
+
+\begin{equation}
+	\begin{array}{rcl}
+	\partial_t \LiIn{6} & = & E_0 
+	\dfrac{
+	\left(k_h \right) A'_6 \LiOut{6} 
+	 }
+	{
+	\begin{array}{cl}
+	&\left(k_h + B'_6 \LiIn{6} \right) \left(1 + G'_6 \LiOut{6} \right)\\
+	+&\left(A'_6 \LiOut{6}\right)\left(1 + J'_6 \LiIn{6}\right)\\
+	\end{array}
+	}\\
+	\end{array}
+\end{equation}	
 
 \end{document}
 
