--- a/src/lithium/doc/lithium6.tex
+++ b/src/lithium/doc/lithium6.tex
@@ -359,13 +359,12 @@ For a given $\Hin$
 	\left(k_h \right) A'_6 \LiOut{6} 
 	 }
 	{
-	\begin{array}{cl}
-	&\left(k_h + B'_6 \LiIn{6} \right) \left(1 + G'_6 \LiOut{6} \right)\\
-	+&\left(A'_6 \LiOut{6}\right)\left(1 + J'_6 \LiIn{6}\right)\\
-	\end{array}
+	\left(k_h + B'_6 \LiIn{6} \right) \left(1 + G'_6 \LiOut{6} \right)
+	+A'_6 \LiOut{6}\left(1 + J'_6 \LiIn{6}\right)
 	}\\
 	\end{array}
 \end{equation}	
+which ensure and exponential shape to the Lithium intake.
 
 \end{document}
 
