after Laurent. Need to work more...

--- a/src/lithium/doc/lithium6.tex
+++ b/src/lithium/doc/lithium6.tex
@@ -23,6 +23,15 @@
 
 \begin{document}
 \section{Mechanism}
+
+$$
+	\delta^7Li = \left(
+		\dfrac{\left(\dfrac{Li^7}{Li^6}\right)_{sample}}
+		{\left(\dfrac{Li^7}{Li^6}\right)_{standard}}
+		 -1 
+	\right) \times 1000
+$$
+
 \begin{equation}
 	 \mychem{Li}_{x} +  \mychem{E}  
 	 \xrightleftharpoons[k_d^x]{k_a^x} 
