--- a/src/lithium/doc/lithium8.tex
+++ b/src/lithium/doc/lithium8.tex
@@ -79,7 +79,6 @@ We have the vector of concentrations
 \begin{equation}
 	\vec{X} = 
 	\begin{pmatrix}
-	%\proton\\
 	\Eout\\
 	\EHin\\
 	\LiEout{6}\\
@@ -99,6 +98,21 @@ J_7 \LiOut{7} \Eout - \LiEout{7}\\
 K_6 \LiEin{6}\proton - \EHin \LiIn{6}\\
 K_7 \LiEin{7}\proton - \EHin \LiIn{7}\\
 \end{pmatrix}
+\end{equation}
+
+at $t=0$,
+\begin{equation}
+	\vec{X}_0 = 
+	\begin{pmatrix}
+	\Eout_0    & = &   \\
+	\EHin_0    & = & 0 \\
+	\LiEout{6} & = &   \\
+	\LiEin{6}  & = & 0 \\
+	\LiIn{6}   & = & 0 \\
+	\LiEout{7} & = &   \\
+	\LiEin{7}  & = &   \\
+	\LiIn{7}   & = &   \\
+	\end{pmatrix}
 \end{equation}
 
 \end{document}
