--- a/src/lithium/doc/lithium8.tex
+++ b/src/lithium/doc/lithium8.tex
@@ -100,6 +100,33 @@ K_7 \LiEin{7}\proton - \EHin \LiIn{7}\\
 \end{pmatrix}
 \end{equation}
 
+We will substitute
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\LiEout{x} & = & J_x \LiOut{x} \Eout\\
+	\\
+	\LiEin{x}  & = & \dfrac{\EHin \LiIn{x}}{K_x\proton}\\
+\end{array}
+\right.
+\end{equation}
+in the matter conservation
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	E_0 & = &\displaystyle \Eout + \EHin + \sum_x \left(\LiEout{x}+\LiEin{x}\right)\\
+	\\
+	& = & \Eout \left\lbrack1+J_6 \LiOut{6} + J_7 \LiOut{7}\right\rbrack + 
+	\EHin 
+	\left\lbrack
+		1+\dfrac{1}{h}\left(\dfrac{\LiIn{6}}{K_6}+\dfrac{\LiIn{7}}{K_7}\right)
+	\right\rbrack
+	\\
+\end{array}
+\right.
+\end{equation}
+
+
 at $t=0$,
 \begin{equation}
 	\vec{X}_0 = 
