WIP v8, almost there

--- a/src/lithium/doc/lithium8.tex
+++ b/src/lithium/doc/lithium8.tex
@@ -131,14 +131,14 @@ at $t=0$,
 \begin{equation}
 	\vec{X}_0 = 
 	\begin{pmatrix}
-	\Eout_0    & = &   \\
+	\Eout_0    & = & \frac{E_0}{1+J_6 \LiOut{6} + J_7 \LiOut{7}}  \\
 	\EHin_0    & = & 0 \\
-	\LiEout{6} & = &   \\
+	\LiEout{6} & = & \frac{J_6 \LiOut{6} E_0} {1+J_6 \LiOut{6} + J_7 \LiOut{7}} \\
 	\LiEin{6}  & = & 0 \\
 	\LiIn{6}   & = & 0 \\
-	\LiEout{7} & = &   \\
-	\LiEin{7}  & = &   \\
-	\LiIn{7}   & = &   \\
+	\LiEout{7} & = & \frac{J_7 \LiOut{7} E_0} {1+J_6 \LiOut{6} + J_7 \LiOut{7}}   \\
+	\LiEin{7}  & = & 0 \\
+	\LiIn{7}   & = & 0 \\
 	\end{pmatrix}
 \end{equation}
 
