--- a/src/lithium/doc/lithium8.tex
+++ b/src/lithium/doc/lithium8.tex
@@ -243,6 +243,8 @@ If we use $\alpha_6=\LiIn{6}^\star$ and $\alpha_7=\LiIn{7}^\star$ then we get
 \end{pmatrix}
 \end{equation}
 
+\end{document}
+
 \section{"Real" Steady States}
 \begin{equation}
 	\begin{array}{rcl}
