try to get a clean first order

--- a/src/lithium/doc/lithium10.tex
+++ b/src/lithium/doc/lithium10.tex
@@ -185,6 +185,11 @@ We get
 	\end{array}
 \right.
 \end{equation}
+knowing that
+\begin{equation}
+	\Eout = \dfrac{E_0 - \EHin \left( 1 + \dfrac{\LiIn{6}}{K'_6} + \dfrac{\LiIn{7}}{K'_7}\right)}
+	{1+J'_6+J'_7}
+\end{equation}
 
 \section{Asymptotic method}
 We note that we have two decoupled systems,
