--- a/src/lithium/doc/lithium10.tex
+++ b/src/lithium/doc/lithium10.tex
@@ -276,6 +276,9 @@ and
 \end{equation}
 
 \section{Channel Simulation}
+%$$
+%D_7 = 6.8\pm0.3 \times 10^{−5} cm^2/s
+%$$
 We take a channel with an attraction zone of size $R$ and length $H$. We take a particle with a 3D diffusion coefficient $D$
 and we want to make a simulation with a time step $\delta t$, so that the length travelled by the particle is
 \begin{equation}
