WIP finding steady state conditions on same value at the end

--- a/src/lithium/doc/lithium10.tex
+++ b/src/lithium/doc/lithium10.tex
@@ -170,7 +170,7 @@ and the steady state conditions become
 \begin{equation}
 	\left\lbrace
 	\begin{array}{rcl}
-		\sigma_l^x & = & \sigma_f^x - \sigma_r^6x\\
+		\sigma_l^x & = & \sigma_f^x - \sigma_r^x\\
 		\sigma_h   & = & \sigma_l^6 + \sigma_l^7\\
 	\end{array}
 	\right.
