need to think about find second order

--- a/src/lithium/doc/lithium10.tex
+++ b/src/lithium/doc/lithium10.tex
@@ -191,6 +191,11 @@ knowing that
 	{1+J'_6+J'_7}
 \end{equation}
 
+\section{Long Time Behavior: steady state}
+It has no analytical solution, but it appears that there is no isotope ratio difference at
+long time during the experiments.
+
+
 \section{Asymptotic method}
 We note that we have two decoupled systems,
 so that with
