WIP, need to simplify

--- a/src/lithium/doc/lithium11.tex
+++ b/src/lithium/doc/lithium11.tex
@@ -114,6 +114,9 @@ leading to a constraint vector
 	J_7' \Eout - \LiE{7} \\
 \end{pmatrix}
 \end{equation}
-
+which already imposes to \eqref{eq:E0}
+\begin{equation}
+	E_0 = \EHin + \Eout \left(1+J'_6+J'_7\right)
+\end{equation}
 
 \end{document}
