WIP finding diffs

--- a/src/lithium/doc/lithium11.tex
+++ b/src/lithium/doc/lithium11.tex
@@ -183,7 +183,7 @@ into
 \begin{equation}
 	\EHin_1 = E_0 \dfrac{\omega_0}{\omega_0+k_h}
 	\left\lbrack
-		 1-e^{\left(\omega_0+k_h\right) t}
+		 1-e^{-\left(\omega_0+k_h\right) t}
 	\right\rbrack,\;\;\widetilde{\EHin}_1 = E_0 \dfrac{\omega_0}{\omega_0+k_h}
 \end{equation}
 Then we have to solve
