WIP, doesn't need second order and all is OK, maybe with flip...

--- a/src/lithium/doc/lithium11.tex
+++ b/src/lithium/doc/lithium11.tex
@@ -317,4 +317,6 @@ and
 	+ E_0\eta_0\eta_x \dfrac{e^{-\tau}-e^{-\lambda_x\tau}}{\lambda_x-1}
 \end{equation}
 
+
+USE THE DEPENDENCY of $\omega_x$ with outer lithium to check that $k_p^x/k_l^x$ is the same.
 \end{document}
